<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232121"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.92"
        tools:ignore="TextSizeCheck">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusMinusBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="plusMinusButton"
                android:text="@string/plusMinus"
                android:textSize="24sp" />

            <Button
                android:id="@+id/divideBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="divideButton"
                android:text="@string/divide"
                android:textSize="24sp" />

            <Button
                android:id="@+id/multiplyBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="multiplyButton"
                android:text="@string/multiply"
                android:textSize="24sp" />

            <Button
                android:id="@+id/clearBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle_orange"
                android:onClick="clearButton"
                android:text="@string/clear"
                android:textColorHighlight="#FAF2F2"
                android:textSize="24sp" />
            />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="oneButton"
                android:text="@string/one"
                android:textSize="24sp" />
            />

            <Button
                android:id="@+id/twoBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="twoButton"
                android:text="@string/two"
                android:textSize="24sp" />
            />

            <Button
                android:id="@+id/threeBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="threeButton"
                android:text="@string/three"
                android:textSize="24sp" />
            />

            <Button
                android:id="@+id/backspaceBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle_orange"
                android:onClick="backspaceButton"
                android:text="@string/backspace"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fourButton"
                android:text="@string/four"
                android:textSize="24sp" />
            />

            <Button
                android:id="@+id/fiveBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fiveButton"
                android:text="@string/five"
                android:textSize="24sp" />
            />

            <Button
                android:id="@+id/sixBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sixButton"
                android:text="@string/six"
                android:textSize="24sp" />

            <Button
                android:id="@+id/subtractBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle_orange"
                android:onClick="subtractionButton"
                android:text="@string/subtract"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sevenButton"
                android:text="@string/seven"
                android:textSize="24sp" />


            <Button
                android:id="@+id/eightBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="eightButton"
                android:text="@string/eight"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nineBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="nineButton"
                android:text="@string/nine"
                android:textSize="24sp" />

            <Button
                android:id="@+id/addBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle_orange"
                android:onClick="addButton"
                android:text="@string/add"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zeroBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="zeroButton"
                android:text="@string/zero"
                android:textSize="24sp" />


            <Button
                android:id="@+id/equals_toBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/circle_orange"
                android:onClick="equals_toButton"
                android:text="@string/equals_to"
                android:textSize="24sp" />

        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="false"
        android:inputType="none"
        android:textSize="24sp"
        android:textAlignment="textEnd"
        android:layout_margin="18dp"
        tools:ignore="LabelFor"
         />
</androidx.constraintlayout.widget.ConstraintLayout>